# uh1_wbc

./: .gitignore  CMakeLists.txt  readme.md  tutorial.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: unitree_wbc.pc
devel/share/unitree_wbc/cmake/: unitree_wbcConfig.cmake
example/Biped/WebotsProject/protos/: H1Description.proto
example/Biped/WebotsProject/worlds/: uh1_2.wbt
example/Biped/include/: bipedController.h  operation.h  robotDynamicsBiped.h  taskDefinitionBiped.h  webotsInterface.h
example/Biped/src/: bipedController.cpp  constraintDefinitionBiped.cpp  main.cpp  operation.cpp  robotDynamicsBiped.cpp  taskDefinitionBiped.cpp  webotsInterface.cpp
example/include/: bipedController.h  constraintDefinitionBiped.h  operation.h  robotDynamicsBiped.h
example/src/: bipedController.cpp  main.cpp  operation.cpp  robotDynamicsBiped.cpp  webotsInterface.cpp
example/webotsProject/worlds/: uh1_2.wbt
include/taichi/: ErrorMsg.h  config.h.in  constraint.h  robotDynamics.h  wbc.h  wqpWbc.h
src/: robotDynamics.cpp  task.cpp  wbc.cpp  wqpWbc.cpp
src/unitree_wbc/: CMakeLists.txt  package.xml  readme.md  tutorial.md
src/unitree_wbc/config/: controller.json  joint_position_plotter.py  rqt_multiplot.xml  rqt_plot_config.json
src/unitree_wbc/config/bkp_webots_model/worlds1024/: .uh1_2.wbproj  intro.md  uh1_2.wbt
src/unitree_wbc/config/python_plot/exp2_sauating/: exp2-pos-arm-proc.py  exp2-pos-arm.txt  exp2-pos-leg.txt  exp2-toq-arm.txt  exp2-toq-leg-proc.py  exp2-toq-leg.txt  run_all.sh
src/unitree_wbc/config/python_plot/exp2_table/: exp2-pos-arm-proc.py  exp2-pos-arm.txt  exp2-pos-leg-proc.py  exp2-pos-leg.txt  exp2-toq-arm-proc.py  exp2-toq-arm.txt  exp2-toq-leg-proc.py  exp2-toq-leg.txt
src/unitree_wbc/config/python_plot/exp3-sideward/: exp3-pos-arm-proc.py  exp3-pos-arm.txt  exp3-pos-leg-proc.py  exp3-pos-leg.txt  exp3-toq-arm-proc.py  exp3-toq-arm.txt  exp3-toq-leg-proc.py  exp3-toq-leg.txt
src/unitree_wbc/config/python_plot/exp3-upforward/: exp2-pos-arm-proc.py  exp3-pos-all-proc.py  exp3-pos-all.txt  exp3-pos-arm.txt  exp3-pos-leg-proc.py  exp3-pos-leg.txt  exp3-toq-all-proc.py  exp3-toq-all.txt  exp3-toq-arm-proc.py  exp3-toq-arm.txt  exp3-toq-leg-proc.py  exp3-toq-leg.txt  run_all.sh
src/unitree_wbc/config/python_plot/exp4_comparison/conOpt10kg/: com_xyz.py  xyz_nOpt_10kg.txt  xyz_wOpt_10kg.txt
src/unitree_wbc/config/python_plot/exp4_comparison/conOpt15kg/: com_xyz.py  xyz_nOpt_15kg.txt  xyz_wOpt_15kg.txt
src/unitree_wbc/config/python_plot/exp4_comparison/conOpt20kg/: com_xyz.py  xyz_nOpt_20kg.txt  xyz_wOpt_20kg.txt  xyz_wOpt_20kg_3s.txt
src/unitree_wbc/config/python_plot/exp4_comparison/conOpt5kg/: com_xyz.py  xyz_nOpt_5kg.txt  xyz_wOpt_5kg.txt
src/unitree_wbc/config/python_plot/exp4_comparison/nOpt5kg/: comprison_ee_x.py  x.txt  xyz.txt  y.txt  z.txt
src/unitree_wbc/config/python_plot/exp4_comparison/wOpt5kg/: comprison_ee_xyz.py  comprison_ee_y.py  comprison_ee_z.py  x.txt  y.txt  z.txt
src/unitree_wbc/config/rqt_plot_xml/: ee_xyz_compare.xml  joint_pos_rqt.xml  joint_pos_rqt_symmetry.xml  joint_pos_toq_combined.xml  joint_toq_rqt.xml  joint_toq_rqt_symmetry.xml  leg_pos_rqt.xml
src/unitree_wbc/example/include/: bipedController.h  configParams.h  constraintDefinition.h  constraintDefinitionBiped.h  operation.h  robotController.h  robotDynamics.h  robotDynamicsBiped.h  taskDefinition.h  taskDefinitionBiped.h  webotsInterface.h
src/unitree_wbc/example/src/: bipedController.cpp  constraintDefinition.cpp  constraintDefinitionBiped.cpp  main.cpp  operation.cpp  robotController.cpp  robotDynamics.cpp  robotDynamicsBiped.cpp  taskDefinition.cpp  taskDefinitionBiped.cpp  webotsInterface.cpp
src/unitree_wbc/example/webotsProject/protos/: CardboardBox.proto  Desk.proto  Robotiq2f140Gripper.proto  Robotiq2f85Gripper.proto  Robotiq3fGripper.proto  RobotiqEPickGripper.proto  SolidBox.proto
src/unitree_wbc/example/webotsProject/worlds/: .ProtoTest.wbproj  .uh1_2.wbproj  .uh1_circle.wbproj  .uh1_circle_force_interaction.wbproj  .uh1_circle_lifting_box.wbproj  .uh1_circle_lifting_box2table.wbproj  .uh1_circle_lifting_squating.wbproj  .uh1_circle_wobox.wbproj  .uh1_gripper.wbproj  .uh1_gripper_wobox.wbproj  ProtoTest.wbt  uh1_2.wbt  uh1_circle.wbt  uh1_circle_force_interaction.wbt  uh1_circle_lifting_box.wbt  uh1_circle_lifting_box2table.wbt  uh1_circle_wobox.wbt  uh1_gripper.wbt
src/unitree_wbc/include/unitree_wbc/: constraint.h  dynamics.h  hqpWbc.h  robotDynamics.h  task.h  wbc.h  wqpWbc.h
src/unitree_wbc/launch/: debug1.launch
src/unitree_wbc/msg/: MotorData.msg
src/unitree_wbc/src/: constraint.cpp  dynamics.cpp  hqpWbc.cpp  robotDynamics.cpp  task.cpp  wbc.cpp  wqpWbc.cpp
